// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Pagination ui first page 1`] = `
<div>
  <div
    class="d-flex justify-content-center flex-wrap flex-sm-nowrap"
  >
    <nav
      aria-label="pagination"
      class=""
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item disabled"
        >
          <button
            class="page-link"
          >
            <i
              class="icon material-icons"
              style="font-size: 14px;"
            >
              arrow_back
            </i>
          </button>
        </li>
        <li
          class="page-item active"
        >
          <button
            class="page-link"
          >
            1
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            2
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            3
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="disabled page-link"
            disabled=""
          >
            ...
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            8
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            9
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            10
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            <i
              class="icon material-icons"
              style="font-size: 14px;"
            >
              arrow_forward
            </i>
          </button>
        </li>
      </ul>
    </nav>
    <div
      class="ms-3 mt-2 mt-sm-0 pagination__total-elements"
    >
      100 records found
    </div>
  </div>
</div>
`;

exports[`Component: Pagination ui last page 1`] = `
<div>
  <div
    class="d-flex justify-content-center flex-wrap flex-sm-nowrap"
  >
    <nav
      aria-label="pagination"
      class=""
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            <i
              class="icon material-icons"
              style="font-size: 14px;"
            >
              arrow_back
            </i>
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            1
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            2
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            3
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="disabled page-link"
            disabled=""
          >
            ...
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            8
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            9
          </button>
        </li>
        <li
          class="page-item active"
        >
          <button
            class="page-link"
          >
            10
          </button>
        </li>
        <li
          class="page-item disabled"
        >
          <button
            class="page-link"
          >
            <i
              class="icon material-icons"
              style="font-size: 14px;"
            >
              arrow_forward
            </i>
          </button>
        </li>
      </ul>
    </nav>
    <div
      class="ms-3 mt-2 mt-sm-0 pagination__total-elements"
    >
      100 records found
    </div>
  </div>
</div>
`;

exports[`Component: Pagination ui middle 1`] = `
<div>
  <div
    class="d-flex justify-content-center flex-wrap flex-sm-nowrap"
  >
    <nav
      aria-label="pagination"
      class=""
    >
      <ul
        class="pagination"
      >
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            <i
              class="icon material-icons"
              style="font-size: 14px;"
            >
              arrow_back
            </i>
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            1
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="disabled page-link"
            disabled=""
          >
            ...
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            4
          </button>
        </li>
        <li
          class="page-item active"
        >
          <button
            class="page-link"
          >
            5
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            6
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="disabled page-link"
            disabled=""
          >
            ...
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            10
          </button>
        </li>
        <li
          class="page-item"
        >
          <button
            class="page-link"
          >
            <i
              class="icon material-icons"
              style="font-size: 14px;"
            >
              arrow_forward
            </i>
          </button>
        </li>
      </ul>
    </nav>
    <div
      class="ms-3 mt-2 mt-sm-0 pagination__total-elements"
    >
      100 records found
    </div>
  </div>
</div>
`;
